// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function Import are parsed properly 1`] = `
[
  {
    "keys": {},
    "path": "DecisionOptions",
  },
]
`;

exports[`Function Import are parsed properly when bound kinda 1`] = `
[
  {
    "keys": {},
    "path": "Decision",
  },
]
`;

exports[`Function Import will fail by default 1`] = `
[
  {
    "keys": {},
    "path": "DecisionOptions",
  },
]
`;

exports[`Function Import will fail by default 2`] = `[Error: Unsupported Action]`;

exports[`Function Import will fail for wrong JS 1`] = `
[
  {
    "keys": {},
    "path": "DecisionOptions",
  },
]
`;

exports[`Function Import will fail for wrong JS 2`] = `[Error: Unsupported Action]`;
